# brainstemx

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py  cli.py  core.py  generate_synthetic_data.py  pipeline.py  postprocess.py  qa.py  report_generator.py  validate_inputs.py  web_visualiser.py
tests/: README.md  __init__.py  base.py  run_tests.py  test_basic.py  test_core.py  test_core_image_processing.py  test_pipeline.py  test_postprocess.py  test_validate_inputs.py
